footer restyled with underline removed and space between icon and label, border removed from writeups, wiki project search bar made more responsive

--- a/src/contact.html
+++ b/src/contact.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/styles.scss">
-    <link rel="stylesheet" href="./styles/footer.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -44,26 +43,28 @@
         </section>
     </main>
     <footer>
-            <section id="contact-places">
-                <div id="github">
-                <a class="fa fa-github" 
-                    href="https://github.com/J-Guidry"
-                    id="profile-link"
-                    target="_blank" 
-                    aria-hidden="true"        
-                    >Github
+        <section id="contact-places">
+            <div id="github">
+              <a class="fa fa-github" 
+                 href="https://github.com/J-Guidry"
+                 id="profile-link"
+                 target="_blank" 
+                 aria-hidden="true"        
+                 >
+                 <span>Github</span> 
+              </a>
+            </div>
+      
+            <div id="linkedin">
+                <a class="fa fa-linkedin"  
+                   href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+                   target="_blank"
+                   aria-hidden="true"
+                   >
+                   <span>LinkedIn</span> 
                 </a>
-                </div>
-        
-                <div id="linkedin">
-                    <a class="fa fa-linkedin"  
-                    href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
-                    target="_blank"
-                    aria-hidden="true"
-                    >LinkedIn
-                    </a>
-                </div>
-            </section>
+              </div>
+          </section>
     </footer>
 </body>
 </html>
