--- a/src/live/viewer/viewer.html
+++ b/src/live/viewer/viewer.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../../styles/_base.scss">
-    <link rel="stylesheet" href="../../styles/_navbar.scss">
+    <link rel="stylesheet" href="../../styles/styles.scss">
     <link rel="stylesheet" href="./viewer.css">
-    <link rel="stylesheet" href="../../styles/footer.css">
 </head>
 <body>
     <header id="navbar">
@@ -37,26 +35,28 @@
     </div>
     </main>
     <footer>
-      <section id="contact-places">
-        <div id="github">
-          <a class="fa fa-github" 
-              href="https://github.com/J-Guidry"
-              id="profile-link"
-              target="_blank" 
-              aria-hidden="true"        
-              >Github
-          </a>
-        </div>
-  
-        <div id="linkedin">
-            <a class="fa fa-linkedin"  
-                href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
-                target="_blank"
-                aria-hidden="true"
-                >LinkedIn
-            </a>
-          </div>
-      </section>
+        <section id="contact-places">
+            <div id="github">
+              <a class="fa fa-github" 
+                 href="https://github.com/J-Guidry"
+                 id="profile-link"
+                 target="_blank" 
+                 aria-hidden="true"        
+                 >
+                 <span>Github</span> 
+              </a>
+            </div>
+      
+            <div id="linkedin">
+                <a class="fa fa-linkedin"  
+                   href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+                   target="_blank"
+                   aria-hidden="true"
+                   >
+                   <span>LinkedIn</span> 
+                </a>
+              </div>
+          </section>
     </footer>
     <script src="./viewer.js"></script>
 </body>
