--- a/src/projects.html
+++ b/src/projects.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./styles/styles.scss">
     <link rel="stylesheet" type="text/css" href="./styles/projects.css">
-    <link rel="stylesheet" type="text/css" href="./styles/footer.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -113,26 +112,28 @@
 </section>
 </main>
 <footer>
-<section id="contact-places">
-    <div id="github">
-        <a class="fa fa-github" 
-            href="https://github.com/J-Guidry"
-            id="profile-link"
-             
-            aria-hidden="true"        
-            >Github
-        </a>
-    </div>
-
-    <div id="linkedin">
-        <a class="fa fa-linkedin"  
-            href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
-            
-            aria-hidden="true"
-            >LinkedIn
-        </a>
+    <section id="contact-places">
+        <div id="github">
+          <a class="fa fa-github" 
+             href="https://github.com/J-Guidry"
+             id="profile-link"
+             target="_blank" 
+             aria-hidden="true"        
+             >
+             <span>Github</span> 
+          </a>
         </div>
-    </section>
+  
+        <div id="linkedin">
+            <a class="fa fa-linkedin"  
+               href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+               target="_blank"
+               aria-hidden="true"
+               >
+               <span>LinkedIn</span> 
+            </a>
+          </div>
+      </section>
 </footer>
 </body>
 </html>
