--- a/src/writeups/simon.html
+++ b/src/writeups/simon.html
@@ -133,24 +133,26 @@
     <footer>
         <section id="contact-places">
             <div id="github">
-                <a class="fa fa-github" 
-                    href="https://github.com/J-Guidry"
-                    id="profile-link"
-                    target="_blank" 
-                    aria-hidden="true"        
-                    >Github
-                </a>
+              <a class="fa fa-github" 
+                 href="https://github.com/J-Guidry"
+                 id="profile-link"
+                 target="_blank" 
+                 aria-hidden="true"        
+                 >
+                 <span>Github</span> 
+              </a>
             </div>
-        
+      
             <div id="linkedin">
                 <a class="fa fa-linkedin"  
-                    href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
-                    target="_blank"
-                    aria-hidden="true"
-                    >LinkedIn
+                   href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+                   target="_blank"
+                   aria-hidden="true"
+                   >
+                   <span>LinkedIn</span> 
                 </a>
-                </div>
-            </section>
-        </footer>
+              </div>
+          </section>
+    </footer>
 </body>
 </html>
