--- a/src/writeups/viewer.html
+++ b/src/writeups/viewer.html
@@ -19,38 +19,40 @@
       </nav>
   </header>
   <main>
-<header class="writeup-header">
-    <h2>Writeup</h2>
-</header>
+    <header class="writeup-header">
+        <h2>Writeup</h2>
+    </header>
    <section class="writeup">
         <p>This is a simple search bar that uses Wikipedia's API to display the results.
             This uses the Fetch API to access Wikipedia, pull data from it, and then construct HTML which is displayed.
         </p>
         <p>Style wise, it uses a green color on a dark background for a nice contrast. The search bar and search button are rounded for aesthetic purposes as are the search results.</p>
    </section>
-</main>
-<footer>
-        <section id="contact-places">
-            <div id="github">
-              <a class="fa fa-github" 
-                 href="https://github.com/J-Guidry"
-                 id="profile-link"
-                 target="_blank" 
-                 aria-hidden="true"        
-                 >Github
+    </main>
+    <footer>
+      <section id="contact-places">
+          <div id="github">
+            <a class="fa fa-github" 
+               href="https://github.com/J-Guidry"
+               id="profile-link"
+               target="_blank" 
+               aria-hidden="true"        
+               >
+               <span>Github</span> 
+            </a>
+          </div>
+    
+          <div id="linkedin">
+              <a class="fa fa-linkedin"  
+                 href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+                 target="_blank"
+                 aria-hidden="true"
+                 >
+                 <span>LinkedIn</span> 
               </a>
             </div>
-      
-            <div id="linkedin">
-                <a class="fa fa-linkedin"  
-                   href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
-                   target="_blank"
-                   aria-hidden="true"
-                   >LinkedIn
-                </a>
-              </div>
-          </section>
-    </footer>
+        </section>
+  </footer>
 </body>
 
 </html>
