--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./styles/styles.scss">
-    <link rel="stylesheet" type="text/css" href="./styles/footer.css">
     <meta name="description" content="This is Jhabari Guidry's web developer portfolio">
     <meta name="keywords" content="jhabari guidry, portfolio, web developer,
      html, css, javascript, react">
@@ -45,7 +44,8 @@
                id="profile-link"
                target="_blank" 
                aria-hidden="true"        
-               >Github
+               >
+               <span>Github</span> 
             </a>
           </div>
     
@@ -54,7 +54,8 @@
                  href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
                  target="_blank"
                  aria-hidden="true"
-                 >LinkedIn
+                 >
+                 <span>LinkedIn</span> 
               </a>
             </div>
         </section>
