--- a/src/writeups/gtd.html
+++ b/src/writeups/gtd.html
@@ -22,12 +22,12 @@
 <header class="writeup-header">
     <h2>Writeup</h2>
 </header>
-   <section class="writeup">
+  <section class="writeup">
     <p>For this app, you begin by listing an item or task. This will list it in an inbox.
         This item can be then categorized as actionable, something that can be done and not a vague goal. In the next tab, the item shows up.
         It then can be categorized further into either a project, which involves multiple steps, a next action which is an action that
         can be done immediately, or an appointment, in which you can pick a date. You can also delete, toggle, and edit items which is from an earlier
-         project, the todolist.
+        project, the todolist.
     </p>
     <p>This app involes a number of libraries. Bootstrap and jquery for tabbed content.
         bootstrap date picker library to make appointments. This project utilizes webpack to allow for imported
@@ -47,27 +47,29 @@
    </section>
 </main>
 <footer>
-        <section id="contact-places">
-            <div id="github">
-              <a class="fa fa-github" 
-                 href="https://github.com/J-Guidry"
-                 id="profile-link"
-                 target="_blank" 
-                 aria-hidden="true"        
-                 >Github
-              </a>
-            </div>
-      
-            <div id="linkedin">
-                <a class="fa fa-linkedin"  
-                   href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
-                   target="_blank"
-                   aria-hidden="true"
-                   >LinkedIn
-                </a>
-              </div>
-          </section>
-    </footer>
+    <section id="contact-places">
+        <div id="github">
+          <a class="fa fa-github" 
+             href="https://github.com/J-Guidry"
+             id="profile-link"
+             target="_blank" 
+             aria-hidden="true"        
+             >
+             <span>Github</span> 
+          </a>
+        </div>
+  
+        <div id="linkedin">
+            <a class="fa fa-linkedin"  
+               href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+               target="_blank"
+               aria-hidden="true"
+               >
+               <span>LinkedIn</span> 
+            </a>
+          </div>
+      </section>
+</footer>
 </body>
 
 </html>
