email and restaurant added

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <p>I like to build web apps. 
         My skills include</p>
       <section id="skills">
-          <span>Html</span><span>CSS</span><span>JavaScript</span>
+          <span>HTML</span><span>CSS</span><span>JavaScript</span>
           <span>Bootstrap</span><span>React</span>
           <span>Git</span><span>Webpack</span><span>JSON</span>
       </section>
