--- a/src/projects.html
+++ b/src/projects.html
@@ -28,32 +28,41 @@
     </header>
 <section class="projects">
     <div class="project-tile">
-            <h5 class="project-title">Agency</h5>
-            <img src="./images/agency.png" alt="Agency screenshot">
-            <div class="project-info">
-                <p>Mock Agency</p>
-                <p>Uses: HTML, CSS, JS</p>
-                <p><a href="https://agency-jg.netlify.com/" >Live</a></p>            </div>
+        <h5 class="project-title">Agency</h5>
+        <img src="./images/agency.png" alt="Agency screenshot">
+        <div class="project-info">
+            <p><a href="https://agency-jg.netlify.com/" >Live</a></p>            
         </div>
-    
-        <div class="project-tile">
-            <h5 class="project-title">Landing Page</h5>
-            <img src="./images/landing.png" alt="Landing Page screenshot">
-            <div class="project-info">
-                <p>Mock Landing Page</p>
-                <p>Uses: HTML, CSS, JS</p>
-                <p><a href="https://landing-jg.netlify.com/">Live</a></p>
-            </div>
+    </div>
+
+    <div class="project-tile">
+        <h5 class="project-title">Landing Page</h5>
+        <img src="./images/landing.png" alt="Landing Page screenshot">
+        <div class="project-info">  
+            <p><a href="https://landing-jg.netlify.com/">Live</a></p>
         </div>
-        <div class="project-tile">
-            <h5 class="project-title">Ecommerce Shop</h5>
-            <img src="./images/shop.png" alt="Ecommerce screenshot">
-            <div class="project-info">
-                <p>Mock Ecommerce Shop</p>
-                <p>Uses: HTML, CSS, JS</p>
-                <p><a href="https://shop-jg.netlify.com/">Live</a></p>
-            </div>
+    </div>
+    <div class="project-tile">
+        <h5 class="project-title">Ecommerce Shop</h5>
+        <img src="./images/shop.png" alt="Ecommerce screenshot">
+        <div class="project-info">  
+            <p><a href="https://shop-jg.netlify.com/">Live</a></p>
         </div>
+    </div>
+    <div class="project-tile">
+        <h5 class="project-title">Restaurant</h5>
+        <img src="./images/restaurant.png" alt="restaurant screenshot">
+        <div class="project-info">
+            <p><a href="https://restaurant-jg.netlify.com/">Live</a></p>
+        </div>
+    </div>
+    <div class="project-tile">
+        <h5 class="project-title">Black Friday Sale E-mail</h5>
+        <img src="./images/promo-email.png" alt="promo email screenshot">
+        <div class="project-info">
+            <p><a href="https://promo-email-jg.netlify.com/">Live</a></p>
+        </div>
+    </div>
 </section>
 
 <header class="projects-header">
