web site tiles have hover effect added to display live link and github code live

--- a/src/projects.html
+++ b/src/projects.html
@@ -29,39 +29,119 @@
 <section class="projects">
     <div class="project-tile">
         <h5 class="project-title">Agency</h5>
-        <img src="./images/agency.png" alt="Agency screenshot">
-        <div class="project-info">
-            <p><a href="https://agency-jg.netlify.com/" >Live</a></p>            
+        <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+                <span class="p-link">
+                    <a href="https://github.com/J-Guidry/noxen-colorlib-recoded">
+                        <span><i class="fa fa-github"></i></span>
+                        Code
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="https://agency-jg.netlify.com/">
+                        <span><i class="fa fa-globe"></i></span>
+                        Live
+                    </a>
+                </span>
+            </div>
+            <div class="project-img">
+                <img src="./images/agency.png" alt="Agency screenshot">
+            </div>
         </div>
     </div>
 
     <div class="project-tile">
         <h5 class="project-title">Landing Page</h5>
-        <img src="./images/landing.png" alt="Landing Page screenshot">
-        <div class="project-info">  
-            <p><a href="https://landing-jg.netlify.com/">Live</a></p>
+        <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+                <span class="p-link">
+                    <a href="https://github.com/J-Guidry/startup-vanilla-colorlib">
+                        <span><i class="fa fa-github"></i></span>
+                        Code
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="https://landing-jg.netlify.com">
+                        <span><i class="fa fa-globe"></i></span>
+                        Live
+                    </a>
+                </span>
+            </div>
+            <div class="project-img">
+                <img src="./images/landing.png" alt="Landing Page screenshot">
+            </div>
         </div>
     </div>
     <div class="project-tile">
         <h5 class="project-title">Ecommerce Shop</h5>
-        <img src="./images/shop.png" alt="Ecommerce screenshot">
-        <div class="project-info">  
-            <p><a href="https://shop-jg.netlify.com/">Live</a></p>
+        <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+                <span class="p-link">
+                    <a href="https://github.com/J-Guidry/eiser-colorlib-recoded">
+                        <span><i class="fa fa-github"></i></span>
+                        Code
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="https://shop-jg.netlify.com/">
+                        <span><i class="fa fa-globe"></i></span>
+                        Live
+                    </a>
+                </span>
+            </div>
+            <div class="project-img">
+                <img src="./images/shop.png" alt="Ecommerce screenshot">
+            </div>
         </div>
     </div>
     <div class="project-tile">
         <h5 class="project-title">Restaurant</h5>
-        <img src="./images/restaurant.png" alt="restaurant screenshot">
-        <div class="project-info">
-            <p><a href="https://restaurant-jg.netlify.com/">Live</a></p>
+        <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+                <span class="p-link">
+                    <a href="https://github.com/J-Guidry/luto-colorlib-recoded">
+                        <span><i class="fa fa-github"></i></span>
+                        Code
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="https://restaurant-jg.netlify.com/">
+                        <span><i class="fa fa-globe"></i></span>
+                        Live
+                    </a>
+                </span>
+            </div>
+            <div class="project-img">
+                <img src="./images/restaurant.png" alt="restaurant screenshot">
+            </div>
         </div>
     </div>
     <div class="project-tile">
         <h5 class="project-title">Black Friday Sale E-mail</h5>
-        <img src="./images/promo-email.png" alt="promo email screenshot">
-        <div class="project-info">
-            <p><a href="https://promo-email-jg.netlify.com/">Live</a></p>
-        </div>
+        <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+                <span class="p-link">
+                    <a href="https://github.com/J-Guidry/promotional-email">
+                        <span><i class="fa fa-github"></i></span>
+                        Code
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="https://promo-email-jg.netlify.com/">
+                        <span><i class="fa fa-globe"></i></span>
+                        Live
+                    </a>
+                </span>
+            </div>
+            <div class="project-img">
+                <img src="./images/promo-email.png" alt="promo email screenshot">
+            </div>
+        </div>        
     </div>
 </section>
 
