--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./styles/banner.css">
     <link rel="stylesheet" type="text/css" href="./styles/styles.scss">
     <meta name="description" content="This is Jhabari Guidry's web developer portfolio">
     <meta name="keywords" content="jhabari guidry, portfolio, web developer,
