changes to web site tile made to app tiles

--- a/src/projects.html
+++ b/src/projects.html
@@ -149,53 +149,131 @@
         <h2>Here Are My Web App Projects</h2>
         <p>These projects use JavaScript to create more interactive applications.</p>
     </header>
-<section class="projects" id="webapp-projects">
+<section class="projects">
     <div class="project-tile">
-    <h5 class="project-title">Simple Productiviy App</h5>
-    <img src="./images/productivity.png" alt="productivity app screenshot">
-    <div class="project-info">
-        <p>A productivity app to organize your tasks</p>
-        <p>Uses: HTML, CSS, JS, Jquery, Bootstrap</p>
-        <p><a href="https://github.com/J-Guidry/simplegtd">Github</a></p>
-        <p><a href="https://simplegtd.netlify.com/">Live</a></p>
-        <p><a href="./writeups/gtd.html">Writeup</a></p>
-    </div>
+        <h5 class="project-title">Simple Productiviy App</h5>
+        <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+                <span class="p-link">
+                    <a href="https://github.com/J-Guidry/simplegtd">
+                        <span><i class="fa fa-github"></i></span>
+                        Code
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="https://simplegtd.netlify.com/">
+                        <span><i class="fa fa-globe"></i></span>
+                        Live
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="./writeups/gtd.html">
+                        Writeup
+                    </a>
+                </span>
+            </div>
+            <div class="project-img">
+                    <img src="./images/productivity.png" alt="productivity app screenshot">
+            </div>
+        </div>
+        <div class="project-info">
+            <p>A productivity app to organize your tasks</p>
+            <p>Uses Jquery, Bootstrap</p>
+        </div>
     </div>
 
-
     <div class="project-tile">
-    <h5 class="project-title">Recipe Box</h5>
-    <img src="./images/recipe-box.png" alt="recipe box screenshot">
-    <div class="project-info">
-        <p>A place to store your recipes</p>
-        <p>Uses: HTML, CSS, JS, React.js</p>
-        <p><a href="https://github.com/J-Guidry/simple-recipe-box/">Github</a></p>
-        <p><a href="https://simple-recipe-box.netlify.com/">Live</a></p>
-        <p><a href="./writeups/recipe.html">Writeup</a></p>
-    </div>
+        <h5 class="project-title">Recipe Box</h5>
+        <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+                <span class="p-link">
+                    <a href="https://github.com/J-Guidry/simple-recipe-box/">
+                        <span><i class="fa fa-github"></i></span>
+                        Code
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="https://simple-recipe-box.netlify.com/">
+                        <span><i class="fa fa-globe"></i></span>
+                        Live
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="./writeups/recipe.html">
+                        Writeup
+                    </a>
+                </span>
+            </div>
+            <div class="project-img">
+                <img src="./images/recipe-box.png" alt="recipe box screenshot">
+            </div>
+        </div>
+        <div class="project-info">
+            <p>A place to store your recipes</p>
+            <p>Uses React.js</p>
+        </div>
     </div>
 
     
     <div class="project-tile">
-    <h5 class="project-title">Simon Game</h5>
-    <img src="./images/simon.png" alt="simon game screenshot">
-    <div class="project-info">
-        <p>Match the colors in sequence</p>
-        <p>Uses: HTML, CSS, JS, React.js</p>
-        <p><a href="https://github.com/J-Guidry/simon-game/">Github</a></p>
-        <p><a href="https://simon-game-6fd.netlify.com/">Live</a></p>
-        <p><a href="./writeups/simon.html">Writeup</a></p>
-    </div>
+        <h5 class="project-title">Simon Game</h5>
+        <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+                <span class="p-link">
+                    <a href="https://github.com/J-Guidry/simon-game/">
+                        <span><i class="fa fa-github"></i></span>
+                        Code
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="https://simon-game-6fd.netlify.com/">
+                        <span><i class="fa fa-globe"></i></span>
+                        Live
+                    </a>
+                </span>
+                <span class="p-link">
+                    <a href="./writeups/simon.html">
+                        Writeup
+                    </a>
+                </span>
+            </div>
+            <div class="project-img">
+                <img src="./images/simon.png" alt="simon game screenshot">
+            </div>
+        </div>
+        <div class="project-info">
+            <p>Match the colors in sequence</p>
+            <p>Uses React.js</p>
+        </div>
     </div>
 
     <div class="project-tile">
     <h5 class="project-title">Wikipedia Viewer</h5>
-    <img src="./images/viewer.png" alt="Wikipedia Viewer screenshot">
+    <div class="project">
+        <div class="overlay"></div>
+        <div class="p-links">
+            <span class="p-link">
+                <a href="./live/viewer/viewer.html">
+                    <span><i class="fa fa-globe"></i></span>
+                    Live
+                </a>
+            </span>
+            <span class="p-link">
+                <a href="./writeups/viewer.html">
+                    Writeup
+                </a>
+            </span>
+        </div>
+        <div class="project-img">
+            <img src="./images/viewer.png" alt="Wikipedia Viewer screenshot">
+        </div>
+    </div>
     <div class="project-info">
         <p>Uses API to get Wikipedia articles</p>
-        <p>Uses: HTML, CSS, JS, Bootstrap</p>
-        <p><a href="./live/viewer/viewer.html">Live</a></p>
-        <p><a href="./writeups/viewer.html">Writeup</a></p>
+        <p>Uses Bootstrap</p>
     </div>
     </div>
 </section>
