footer color changed. Minor change to introduction.

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <section id="welcome-section">
       <h1>Hello</h1>
       <p>I am Jhabari Guidry, Front-End Web Developer</p>
-      <p>I like to build web apps. 
+      <p>I like to build web sites. 
         My skills include</p>
       <section id="skills">
           <span>HTML</span><span>CSS</span><span>JavaScript</span>
