--- a/src/contact.html
+++ b/src/contact.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main class="main-contact">
-    <header id="contact-header"><p>Feel free to contact me</p></header>
+    <header id="contact-header"><p>Feel Free to Contact Me</p></header>
         <section id="contact-me">
         <h3>Leave a Message</h3>
         <form netlify name="contact" method="POST">
@@ -36,8 +36,9 @@
             </p>
             <p>
             <label for="message">Your Message:</label>
+            
+            <textarea name="message" id="message" cols="23" rows="10" required></textarea>
             </p>
-            <textarea name="message" id="message" cols="25" rows="10" required></textarea>
             <button type="submit" id="submit">Send</button>
         </form>
         </section>
