--- a/src/projects.html
+++ b/src/projects.html
@@ -12,7 +12,7 @@
 <header id="navbar">
     <nav>
         <ul>
-        <li><a href="./">About</a></li>
+        <li><a href="/">About</a></li>
         <li><a href="/projects/">Projects</a></li>
         <li><a href="/contact/">Contact</a></li>
         </ul>
